Add `gateCheck` option to Redelivery & Release searches
